# hist-qt

./: .gitmodules  CMakeLists.txt  RangeSelectionDialog.hpp  camera.cpp  camera.h  histcharter.cpp  histcharter.h  histcompareview.cpp  histcompareview.h  histdimscombo.h  histfacade.cpp  histfacade.h  histfacadecollectionview.cpp  histfacadecollectionview.h  histfacadegrid.cpp  histfacadegrid.h  histfacadepainter.cpp  histfacadepainter.h  histfacadeview.cpp  histfacadeview.h  histpainter.cpp  histpainter.h  histqt.pro  histsliceorienview.cpp  histsliceorienview.h  histsliceview.cpp  histsliceview.h  histview.cpp  histview.h  histvolumephysicalview.cpp  histvolumephysicalview.h  histvolumesliceview.cpp  histvolumesliceview.h  histvolumeview.cpp  histvolumeview.h  lazyui.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+21 more)
data/tests/: 3dto2d.cpp  CMakeLists.txt  checkrange.cpp  extent.cpp  input.cpp  merge.cpp  sparsefull.cpp  volasgrid.cpp
data/tests/s3d_run/data/333/: pdfhelper.00010  pdfhelper.00013  pdfhelper.00015  pdfhelper.00020  pdfids.00003  pdfids.00004  pdfids.00013  pdfoffsets.00003  pdfoffsets.00004  pdfoffsets.00005  pdfoffsets.00007  pdfoffsets.00009  pdfoffsets.00010  pdfoffsets.00011  pdfoffsets.00012  pdfoffsets.00013  pdfoffsets.00014  pdfoffsets.00015  pdfoffsets.00016  pdfoffsets.00017  pdfoffsets.00019  pdfoffsets.00021  pdfoffsets.00022  pdfoffsets.00023  pdfoffsets.00025  pdfvalues.00011  pdfvalues.00013  pdfvalues.00016  sortedhelper.00014  sortedid.00000  sortedid.00001  sortedid.00002  sortedid.00003  sortedid.00004  sortedid.00005  sortedid.00006  sortedid.00007  sortedid.00008  sortedid.00009  sortedid.00010  (+70 more)
data/tests/s3d_run/data/tracer-1.0000E-07/: pdfhelper.00005  pdfids.00000  pdfids.00001  pdfids.00002  pdfids.00003  pdfids.00004  pdfids.00005  pdfids.00006  pdfids.00007  pdfoffsets.00000  pdfoffsets.00001  pdfoffsets.00002  pdfoffsets.00003  pdfoffsets.00004  pdfoffsets.00005  pdfoffsets.00006  pdfoffsets.00007  pdfvalues.00000  pdfvalues.00001  pdfvalues.00002  pdfvalues.00003  pdfvalues.00004  pdfvalues.00005  pdfvalues.00006  pdfvalues.00007  sortedhelper.00001  sortedhelper.00004  sortedhelper.00005  sortedhelper.00006  sortedhelper.00007  sortedid.00001  sortedid.00004  sortedid.00005  (+16 more)
(+83 files in other folders)
